@startuml
title WordMiner MVP - Domain-Driven Design Architecture


class App {
    +main(args: String[])
}

' ===========================================================
' Presentation Layer - 表现层
' ===========================================================
package presentation {
    class MainWindow {
        -articleTable: JTable
        -tableModel: DefaultTableModel
        -articleRepository: ArticleRepository
        +display()
        +onImportArticle()
        +onDeleteArticle()
        +refreshArticleList()
    }
}

' ===========================================================
' Domain Layer - 领域层 (DDD 核心)
' ===========================================================
package domain {

    ' -------------------------------------------------------
    ' Article 实体
    ' -------------------------------------------------------
    class Article {
        -id: int
        -title: String
        -content: String
        ~Article(id: int, title: String, content: String)
        +countWords(): int
        +countUniqueWords(): int
    }

    ' -------------------------------------------------------
    ' ArticleDataMapper
    ' 负责：将 datasource 返回的 DBArticleDTO 转换为 domain 的 Article 对象
    ' -------------------------------------------------------
    class ArticleDataMapper {
        +fromDTO(dto: DBArticleDTO): Article
    }

    ' -------------------------------------------------------
    ' Article Repository (聚合根)
    '
    ' 负责：
    '   1. 初始化时从数据库载入数据 (DBLoader) → 通过 Mapper 转换为 Article 对象
    '   2. importArticle(path) 时：
    '      - FileLoader 读文件内容
    '      - DBSaver 存库（获得新 ID）
    '      - DBLoader 重新读取（确保 ID 正确）
    '      - Mapper 转换为 Article
    '      - 添加到 articles Map
    '   3. 删除文章时通知 datasource 删除数据库 (DBSaver)
    ' ------------------------------------------------------- 

    class ArticleRepository {
        -articles: Map<int, Article>
        -dbLoader: DBLoader
        -dbSaver: DBSaver
        -fileLoader: FileLoader
        -mapper: ArticleDataMapper

        +ArticleRepository(dbLoader: DBLoader, dbSaver: DBSaver, fileLoader: FileLoader, mapper: ArticleDataMapper)

        +importArticle(path: Path): boolean
        +getAllArticles(): List<Article>
        +findById(id: int): Article
        +findByTitle(title: String): List<Article>
        +delete(id: int): boolean
        +exists(id: int): boolean
        +count(): int
    }
}


' ===========================================================
' DataSource Layer - 基础设施层
' ===========================================================
package datasource {

    ' -------------------------------------------------------
    ' Loader：从数据库返回基础类型/DTO（不能返回 Article）
    ' -------------------------------------------------------
    class DBArticleDTO {
        +id: int
        +title: String
        +content: String
    }

    interface DBLoader {
        +loadAll(): List<DBArticleDTO>
        +loadById(id: int): DBArticleDTO
    }

    ' -------------------------------------------------------
    ' Saver：负责存储数据，返回基础类型
    ' Repository 使用返回的数据 new Article
    ' -------------------------------------------------------
    interface DBSaver {
        +save(title: String, content: String): int   ' 返回新 ID
        +delete(id: int): boolean
    }

    ' -------------------------------------------------------
    ' FileLoader：用于 importArticle 读取本地文件
    ' -------------------------------------------------------
    interface FileLoader {
        +readFile(path: Path): String   ' 返回文章内容, title就是文件名
    }

    ' -------------------------------------------------------
    ' FileLoader 实现类
    ' -------------------------------------------------------
    class LocalFileLoader {
        +readFile(path: Path): String
    }
    
    FileLoader <|.. LocalFileLoader

    ' -------------------------------------------------------
    ' SQLiteDataSource (Singleton)
    ' -------------------------------------------------------
    class SQLiteDataSource {
        -instance: SQLiteDataSource <<static>>
        +getInstance(): SQLiteDataSource <<static>>
        +getConnection(): Connection
        -initSchema()
    }

    ' -------------------------------------------------------
    ' DBLoader & DBSaver 实现类
    ' -------------------------------------------------------
    class SQLiteArticleDAO {
        -ds: SQLiteDataSource
        +loadAll(): List<DBArticleDTO>
        +loadById(id: int): DBArticleDTO
        +save(title: String, content: String): int
        +delete(id: int): boolean
    }

    DBLoader <|.. SQLiteArticleDAO
    DBSaver <|.. SQLiteArticleDAO
}

' ===========================================================
' Dependencies
' ===========================================================
App ..> SQLiteArticleDAO
App ..> LocalFileLoader
App ..> ArticleDataMapper
App ..> ArticleRepository
App ..> MainWindow

MainWindow --> domain.ArticleRepository

domain.ArticleRepository -->"*" domain.Article
domain.ArticleRepository --> datasource.DBLoader
domain.ArticleRepository --> datasource.DBSaver
domain.ArticleRepository --> datasource.FileLoader
domain.ArticleRepository --> domain.ArticleDataMapper
domain.ArticleRepository ..> DBArticleDTO

domain.ArticleDataMapper ..> datasource.DBArticleDTO
domain.ArticleDataMapper ..> domain.Article

datasource.DBLoader ..> DBArticleDTO

datasource.SQLiteArticleDAO ..> datasource.DBArticleDTO
datasource.SQLiteArticleDAO --> datasource.SQLiteDataSource

@enduml